Add facebook login

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ ios/firebase_app_id_file.json
 macos/Runner/GoogleService-Info.plist
 macos/firebase_app_id_file.json
 
+# Facebook configuration
+android/app/src/main/res/values/strings.xml
+
 # IntelliJ related
 *.iml
 *.ipr
