Add auth controller/service unit testing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_hooks: ^0.20.4
   iconoir_flutter: ^7.3.0
+  mocktail: ^1.0.2
 
 dev_dependencies:
   flutter_test:
