Implemented getCourses functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   mocktail: ^1.0.2
   sqflite: ^2.3.0
   path: ^1.8.3
+  ribbon_widget: ^1.0.5
 
 dev_dependencies:
   flutter_test:
