--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   ribbon_widget: ^1.0.5
+  awesome_dialog: ^3.2.0
+  audioplayers: ^5.2.1
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
