First commit since the tragedy

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
         <provider android:authorities="com.facebook.katana.provider.PlatformProvider" />
     </queries>
     <application
-        android:label="luciapp"
+        android:label="Luciapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
