--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dev_dependencies:
     sdk: flutter
   flutter_driver:
     sdk: flutter
+  network_image_mock: ^2.1.1
+  mockito: ^5.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
