--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,13 @@ dev_dependencies:
     sdk: flutter
   network_image_mock: ^2.1.1
   mockito: ^5.4.4
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  image_path: "assets/icon.png"
+  adaptative_icon_background: "#ffffff"
+  adaptative_icon_foreground: "assets/adaptative.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
